<resources>
    <string name="app_name">Space Explorer</string>
    <string name="drawer_open">Открыть меню навигации</string>
    <string name="drawer_close">Закрыть меню навигации</string>
    <string name="earth">Земля</string>
    <string name="mars">Марс</string>
    <string name="moon">Луна</string>
    <string name="space_object">Космическое тело</string>
    <string name="favourite_items">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="dev_info">О нас</string>
    <string name="try_again">Повторить</string>
</resources>